<resources>
    <string name="app_name">Mobillium.Project</string>
    <string name="searchHintText">Ürün veya Vitrin Ara</string>
    <string name="featuredText">EN YENİ ÜRÜNLER</string>
    <string name="featuredText2">TÜMÜ></string>
    <string name="category_title">KATEGORİLER</string>
    <string name="collection_title">KOLEKSİYONLAR</string>
    <string name="editorshops_title">EDİTÖR SEÇİMİ VİTRİNLER</string>
    <string name="newshops_title">EN YENİ VİTRİNLER</string>
</resources>
